Fixed: Nav.js: I added two divs with classNames, just to make the logo background, right now I test around to make it work. Fixed: _mobile.scss: Added the nav menu className which were one of the new classes I did in the Nav.js. So they will be in a row instead of a column which they will be in the dekstop mode. Fixed: _tablet.scss: tablet mode is almost done with the design as close to the mockup, I will clean the code once the desktop mode are also done and everything is working. What is left now is the logo background behind the logo that arent correct yet, and the background on the nav will be gone. Fixed: _desktop.scss: Made the nav links in a column instead of in a row, but when I changed something in the mobile/tablet I need to check more with the column change. As usual created the design more alike the mockup with changing the images sizes.

--- a/src/sass/_desktop.scss
+++ b/src/sass/_desktop.scss
@@ -1,4 +1,108 @@
-.TEST{
+
+.logo--background{
+    height: 170px;
+    width: 220px;
+    padding-left: 20px;
+}
+
+
+.logo--background img {
+    height: 145px;
+    width: 217px;
+}
+
+#logo{
+   display: inline-block;
+   height: 112px;
+   width: 165px;
+    padding-right: 60px;
+   
+}
+
+
+#logo img{
+    height: 112px;
+    width: 165px;
+    margin: 20px 10px;
+}
+
+
+
+.nav--wrapper{
+    min-width: 1265px;
+    min-height: 800px;
     
-    color: red;
+}
+
+nav{
+  
+}
+
+
+
+.nav-links{
+    display: flex;
+    flex-direction: column;
+    padding-right: 950px;
+    padding-top: 100px;
+    
+    
+}
+
+
+
+.select-box--home{
+    
+ 
+    width: 241px;
+   
+}
+
+.select-box--dragons{
+    
+   
+    width: 241px;
+   
+}
+
+.select-box--test{
+    
+    
+    width: 241px;
+   
+}
+
+.select-box--cookie{
+    
+    
+    width: 241px;
+   
+}
+
+.select-box--home img{
+    
+   
+    width: 241px;
+   
+}
+
+.select-box--dragons img{
+    
+    
+    width: 241px;
+   
+}
+
+.select-box--test img{
+    
+   
+    width: 241px;
+   
+}
+
+.select-box--cookie img{
+    
+ 
+    width: 241px;
+   
 }
