--- a/src/sass/_tablet.scss
+++ b/src/sass/_tablet.scss
@@ -1,15 +1,119 @@
+.logo--background{
+        background-image:url('../images/BackgroundSrc/dragonscales_homepage.png');
+    background-repeat: no-repeat; 
+    background-size: cover;
+   height: 90px;
+   width: 120px;
+}
+
+
+
 #logo{
    display: inline-block;
+   height: 97px;
+   width: 120px;
+    padding-bottom: 30px;
+   
 }
 
 
 #logo img{
-    height: 70px;
+    height: 73px;
     width: 100px;
+    margin: 20px 10px;
 }
+
 
 #home {
     display: none;
 
 }
 
+
+
+.nav--wrapper{
+    min-width: 768px;
+    min-height: 1024px;
+    
+}
+
+
+nav img {
+
+    min-height: 10px;
+    min-width: 30px;        
+    
+}
+
+
+.nav-links{
+    display: flex;
+    justify-content:flex-start;
+    padding: 4px 26px 0px 12px;
+    
+    
+}
+
+.nav--menu{
+    padding-left: 90px;
+    display: flex;
+    flex-direction: row;
+}
+
+
+
+.select-box--home{
+    
+    height: 128px;
+    width: 167px;
+   
+}
+
+.select-box--dragons{
+    
+    height: 128px;
+    width: 167px;
+   
+}
+
+.select-box--test{
+    
+    height: 128px;
+    width: 167px;
+   
+}
+
+.select-box--cookie{
+    
+    height: 128px;
+    width: 167px;
+   
+}
+
+.select-box--home img{
+    
+    height: 128px;
+    width: 167px;
+   
+}
+
+.select-box--dragons img{
+    
+    height: 128px;
+    width: 167px;
+   
+}
+
+.select-box--test img{
+    
+    height: 128px;
+    width: 167px;
+   
+}
+
+.select-box--cookie img{
+    
+    height: 128px;
+    width: 167px;
+   
+}
